# cloud-pyprland

./: README.md  flake.nix  pyproject.toml
cloud_pyprland/: fcitx5_switcher.py  hdrop.py  sleepy.py
plugins/: __init__.py  fcitx5_switcher.py  hdrop.py
