[project]
name = "cloud-pyprland"
version = "0.1.0"
description = "RhenCloud's plugins for pyprland"
license = "MIT"
authors = [{ name = "RhenCloud", email = "i@rhen.cloud" }]
readme = "README.md"
homepage = "https://github.com/RhenCloud/cloud-pyprland"
requires-python = ">=3.12"
dependencies = ["pyprland (>=3.0.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.14.14,<0.15.0)"]

[tool.ruff]
line-length = 140
preview = false
src = ["pyprland"]
exclude = ["*_v?.py", "tests", "scripts", "sample_extension", ".git"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "D105",
    "D107",
    "E203",
    "ISC001",
    "RET503",
    "S101",
    "S311",
    "S404",
    "S602",
    "S603",
    "S605",
    "S607",
    "TID252",
]
select = [
    "A",
    "AIR",
    "ARG",
    "ASYNC",
    "B",
    "B",
    "C",
    "C4",
    "C90",
    "D",
    "D",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FIX",
    "FLY",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "PERF",
    "PIE",
    "PT",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "ASYNC1",
    "UP",
    "W",
    "YTT",
    "ANN",
    "N",
    "G",
    "PL",
    "TRY",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
