[project]
name = "cloud-pyprland"
version = "0.1.0"
description = "RhenCloud's plugins for pyprland"
license = "MIT"
authors = [{ name = "RhenCloud", email = "i@rhen.cloud" }]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pyprland = "^3.0.0"
requests = "^2.32.5"


build-backend = "poetry.core.masonry.api"
