[project]
name = "cloud-pyprland"
version = "0.1.0"
description = "RhenCloud's plugins for pyprland"
license = "MIT"
authors = [{ name = "RhenCloud", email = "i@rhen.cloud" }]
readme = "README.md"


dependencies = ["pyprland>=2.6", "requests>=2.32.5,<3.0.0"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
